# lambdacube-edsl

./: .gitignore  LambdaCube-CL.tex  README.md  stack.yaml
agda/: Types.agda
demoscene/: Blur.hs  BuiltinVec.hs  FCurve.hs  Gamma.hs  Geometry.hs  Glow.hs  RayMarch.hs  Scanlines.hs  ShaderToy.hs  Swizzling.hs  ThriftUtils.hs  Utility.hs  VSM.hs  Vignette.hs  effects.txt  saveMesh.hs  test2D.hs  testBlender.hs  testFCurve.hs  testPointSprite.hs  testRayMarch.hs  testShaderToy.hs  testSprite.hs  testVSM.hs
hStunts/: Args.hs  BulletUtil.hs  Emulate.hs  GameData.hs  GameGraphics.hs  GamePhysics.hs  LICENSE  Main.hs  MeshUtil.hs  Utils.hs  Zip.hs  fontlicenses.txt  stunts.cabal  todo
hStunts/Stunts/: Color.hs  Loader.hs  Track.hs  Unpack.hs
hStunts/emulate8086/: DosBox.hs  Emulate.hs  Parse.hs  Test.hs  bushes.asm
lambdacube-core/: BiMap.hs  GLSLPretty.hs  LCAPI.hs  LCAPIType.hs  LCAPITypeTypeclass.hs  LCConvert.hs  LCDSLType.hs  LCDSLTypeTypeclass.hs  LCDeBruijn.hs  LCDeBruijnUtil.hs  LCGL.hs  LCGLSLCodeGen.hs  LCGLUtil.hs  LCHOAS.hs  LCHOASTypeclass.hs  LCHOASUntyped.hs  LCMesh.hs  LCPrimFun.hs  LCPrimFunTypeclass.hs  LCPrimFunUntyped.hs  LCSampler.hs  LCType.hs  LC_API.hs  LC_API2.hs  LC_APIType.hs  LC_B2_Compile3.hs  LC_B2_IR.hs  LC_B_GL.hs  LC_B_GLCompile.hs  LC_B_GLData.hs  LC_B_GLSLCodeGen.hs  LC_B_GLSLPretty.hs  LC_B_GLSLSyntax.hs  LC_B_GLType.hs  LC_B_GLUtil.hs  LC_B_Traversals.hs  LC_C_Convert.hs  LC_C_Convert2.hs  LC_C_PrimFun.hs  LC_Convert.hs  (+25 more)
lambdacube-core/archive/: GLSLSyntax.hs  LCDeBruijn.hs  LCType.hs
lambdacube-core/docs/: array-extension  demo-ideas  dsl-notes  evaluation  whatsmissing
lambdacube-core/oldgl/: LC_API.hs  LC_B_GL.hs  LC_B_GLCompile.hs  LC_B_GLData.hs  LC_B_GLType.hs  LC_Mesh.hs
lambdacube-core/sandbox/: LC_APIType.hs  LC_Convert2.hs  LC_GADT_APIType.hs  LC_GADT_HOAS2.hs  LC_GADT_Sampler.hs  LC_GLSL_CodeGen.hs  LC_I_DeBruijn.hs  LC_I_HOAS.hs  LC_I_PrimFun.hs  LC_T_APIType.hs  LC_T_DSLType.hs  LC_T_HOAS.hs  LC_U_DeBruijn.hs  LC_U_HOAS.hs
lambdacube-core/sandbox/ghc-dsl/: LCDSL.hs  LCDSLContext.hs  Test.hs
lambdacube-core/sandbox/hash-consing/: LC_C_Convert.hs  LC_U_DeBruijn.hs
lambdacube-core/sandbox/lambdacube-unified-input/: DesignNotes  LC_C_Convert.hs  LC_C_PrimFun.hs  LC_G_APIType.hs  LC_G_LinearAlgebraTypes.hs  LC_T_APIType.hs  LC_T_DSLType.hs  LC_T_HOAS.hs  LC_T_Language.hs  LC_T_PrimFun.hs  LC_T_Sampler.hs  LC_U_APIType.hs  LC_U_DeBruijn.hs  LC_U_PrimFun.hs  lambdacube-core.cabal
lambdacube-core/sandbox/lc-extension/: PerLightVSM.hs
lambdacube-core/sandbox/syntax/: hello_world.lc.hs  hello_world_typed.lc.hs  stunts_ver1.lc.hs  stunts_ver2.lc.hs  test2.lc.hs
lambdacube-core/sandbox/syntax/typing/: PACKAGES  mgu.hs  test.hs  ty.hs
lambdacube-core/sandbox/syntax/typing/Typing/: Fresh.hs  Infer.hs  MonoEnv.hs  Repr.hs  Subst.hs  TC.hs  Unify.hs
lambdacube-core/src/lib/LambdaCube/Core/: DeBruijn.hs  DeBruijnRec.hs  LC_B2_Compile3.hs  LC_B2_IR.hs  PrimFun.hs  Traversals.hs  Type.hs
lambdacube-core/src/lib/LambdaCube/Core/Util/: BiMap.hs
lambdacube-core/tmp/archive/: LCAPIType.hs  LCLanguage.hs  LICENSE  lambdacube-core.cabal
lambdacube-core/tmp/sandbox/: LC_GADT_DSLType.hs  LC_GADT_PrimFun.hs  LC_GL.hs  LC_GL_Util.hs  LC_T_PrimFun.hs  LC_U_DeBruijn.hs  LC_U_PrimFun.hs
lambdacube-core/tmp/sandbox/ghc-dsl/: LCDSL.hs  LCDSLLinAlg.hs  LCDSLTexture.hs
lambdacube-core/tmp/sandbox/hash-consing/: BiMap.hs  LC_U_DeBruijn.hs
lambdacube-core/tmp/sandbox/lambdacube-unified-input/: FixplateUtils.hs  LC_C_Data.hs  LC_G_APIType.hs  LC_T_APIType.hs  LC_T_Instances.hs  LC_T_Language.hs  LC_T_Sampler.hs
lambdacube-core/tmp/sandbox/lc-extension/: PerLightVSM.hs
lambdacube-core/tmp/sandbox/syntax/: hello_world_typed.lc.hs  stunts_ver1.lc.hs  typesystem
lambdacube-dsl/: CompositionalLC.hs  Core.hs  CoreToDeBruijn.hs  CoreToGLSL.hs  CoreToIR.hs  Driver.hs  GLSLUtil.hs  IR.hs  LICENSE  MaterialTest.hs  Monkey.lcmesh  ParseTrifectaLC.hs  ParseUU.hs  Parser.hs  ParserUtil.hs  Pretty.hs  SampleIR.hs  ToDeBruijn.hs  Type.hs  Typecheck.hs  Typing.hs  gfx01.lc  gfx02.lc  gfx03.lc  lambdacube-dsl.cabal  runTests.hs  sample.hs  sampleIR.hs  syntax01.lc  syntax02.lc  syntax03.lc
lambdacube-editor/: README.md  bower.json  index.html  token_tooltip.js
lambdacube-edsl/: lambdacube-edsl.cabal
lambdacube-edsl/src/lib/LambdaCube/: Language.hs
lambdacube-edsl/src/lib/LambdaCube/Convert/: PrimFun.hs  ToDeBruijn.hs  ToDeBruijnRec.hs
lambdacube-edsl/src/lib/LambdaCube/Language/: HOAS.hs  PrimFun.hs  ReifyType.hs  Sampler.hs  Type.hs
lambdacube-gl/: LC_GL.hs  LC_GL_API.hs  LC_GL_Data.hs  LC_GL_Input.hs  LC_GL_Mesh.hs  LC_GL_Type.hs  LC_GL_Util.hs  LICENSE  lambdacube-gl.cabal
lambdacube-gl-ir/: SampleIR.hs  lambdacube-gl-ir.cabal
lambdacube-gl/src/lib/LambdaCube/: GL.hs
lambdacube-gl/src/lib/LambdaCube/GL/: Backend.hs  Compile.hs  Data.hs  GLSLCodeGen.hs  Mesh.hs  ObjParser.hs  Type.hs  Util.hs
lambdacube-samples/: BulletExample.hs  ConvolutionFilter.hs  CubeMap.hs  FX.hs  Hello.hs  LICENSE  ShadowMapping.hs  Spheres.hs  lambdacube-samples.cabal  texturedCube.hs  texturedCubeSamplerOut.hs
lambdacube-samples/Common/: GraphicsUtils.hs  Utils.hs
lambdacube-webgl/: bower.json  index.html  lambdacube-webgl.coffee  main.js  pipeline.js  readme  test-ir.js  webgl-utils.js  webgl.html
q3demo/: BSP.hs  Camera.hs  Effect.hs  GPipeFPSRender.hs  Graphics.hs  Items.hs  LICENSE  MD3.hs  Main.hs  Material.hs  Q3Patch.hs  README  Render.hs  ShaderParser.hs  Zip.hs  q3demo.cabal
samples/: Scene.lcmesh  VSM.hs  deferredTest.hs  samples.cabal  test.hs  test2.hs  test2D.hs  testGeometryShader.hs  testPointSprite.hs  testTexture.hs  testTextureSlot.hs  testThreaded.hs  testVSM.hs
samples/convolution-filter/: ConvolutionFilter.hs  GraphicsUtils.hs  Utils.hs
samples/cubemap/: CubeMap.hs  GraphicsUtils.hs
samples/frp-physics/: BulletExample.hs  GraphicsUtils.hs
samples/shadow-mapping/: GraphicsUtils.hs  ShadowMapping.hs  Utils.hs  VSM.hs
typesystem/: Compositional.hs  CompositionalLC.hs  Curry.hs  HindleyMilner.hs  MilnerMycroft.hs  (+19 more)
(+101 files in other folders)
