Name:          stunts
Version:       0.1.3
Cabal-Version: >= 1.2
Synopsis:      A revival of the classic game Stunts (LambdaCube tech demo)
Category:      Graphics, Game
Description:
  A revival of the classic racing game Stunts to serve as a
  non-toy-sized example for LambdaCube. In order to make it work, you
  need to download the original game as per the instructions given by
  the program.
  .
  The program contains screenshotting functionality that allows you to
  capture frames as separate PNG files to produce movies with a smooth
  frame rate. To enable, install with the @capture@ flag:
  .
  @cabal install --flags=capture@
  .
  It is also possible to compile a version of the program that looks
  for the resource files in the current directory by enabling the
  @portable@ flag.

Author:        Csaba Hruska, Gergely Patai
Maintainer:    csaba (dot) hruska (at) gmail (dot) com
Copyright:     (c) 2011, Csaba Hruska
Homepage:      http://www.haskell.org/haskellwiki/LambdaCubeEngine
Bug-Reports:   http://code.google.com/p/lambdacube/issues
License:       BSD3
License-File:  LICENSE
Stability:     experimental
Build-Type:    Simple
Extra-Source-Files:
  README
  Stunts/Color.hs
  Stunts/Loader.hs
  Stunts/Track.hs
  Stunts/Unpack.hs
  BulletUtil.hs
  GameData.hs
  GameGraphics.hs
  GamePhysics.hs
  Main.hs
  MeshUtil.hs
  Utils.hs
  Zip.hs

Data-Files:
  media/newstunts.zip

Flag Capture
  Description:    Enable the continuous screen capture functionality.
  Default:        False

Flag Portable
  Description:    Compile a version that looks for resources in the current directory.
  Default:        False

Executable stunts
  HS-Source-Dirs: .
  Main-IS:        Main.hs
  Extensions:     CPP
  GHC-Options:    -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -O2 -fspec-constr-count=6 -rtsopts
  Build-Depends:  base >= 4 && < 5, directory, random, mtl, lambdacube-core, bullet, elerea, GLFW-b, bytestring, binary,
                  containers, vector, vect, OpenGLRaw, bytestring-trie, zlib, mmap, filepath

  if flag(Capture)
    Build-Depends:  Codec-Image-DevIL
    CPP-Options:    -DCAPTURE

  if flag(Portable)
    CPP-Options:    -DPORTABLE
