Name:           lambdacube-core
Version:        0.1.0
Cabal-Version:  >= 1.6 && < 2
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Author:         Csaba Hruska, Gergely Patai
Maintainer:     csaba (dot) hruska (at) gmail (dot) com
Stability:      experimental
Homepage:       http://lambdacube3d.wordpress.com/
Bug-Reports:    https://github.com/csabahruska/lc-dsl/issues
Category:       Graphics
Tested-With:    GHC == 7.6.3
Synopsis:       LambdaCube 3D is a domain specific language and library that makes it possible to program GPUs in a purely functional style.
Description:
    LambdaCube 3D is a domain specific language and library that makes
    it possible to program GPUs in a purely functional style.
    Programming with LambdaCube constitutes of composing a data-flow
    description, which is compiled into a specialised library. The
    language provides a uniform way to define shaders and compositor
    chains by treating both streams and framebuffers as first-class
    values.
    .
    As a user of the library you only need to import the "LC_API" and
    "LC_Mesh" modules. You should check out the pointers at <http://lambdacube3d.wordpress.com/getting-started/>
    to understand the principle behind the library, and also have a good look
    at the @lambdacube-samples@ package.

Library
  Build-Depends:
        base >=4.6 && <4.7, containers >=0.5 && <0.6, mtl >=2.1 && <2.2, bytestring >=0.10 && <0.11, bytestring-trie >=0.2 && <0.3, vector >=0.10 && <0.11, OpenGLRaw >=1.4 && <1.5, bitmap >=0.0 && <0.1, prettyclass >=1.0 && <1.1, language-glsl >=0.0 && <0.1, binary >=0.7 && <0.8
  Exposed-modules:
        BiMap
        LC_API
        LC_B_GL
        LC_B_GLCompile
        LC_B_GLData
        LC_B_GLSLCodeGen
        LC_B_GLType
        LC_B_GLUtil
        LC_B_Traversals
        LC_C_Convert
        LC_C_PrimFun
        LC_G_APIType
        LC_G_Type
        LC_Mesh
        LC_T_APIType
        LC_T_DSLType
        LC_T_HOAS
        LC_T_Language
        LC_T_PrimFun
        LC_T_Sampler
        LC_U_APIType
        LC_U_DeBruijn
        LC_U_PrimFun
                  
  GHC-options:
--        -Werror
        -Wall
        -fno-warn-missing-signatures
        -fno-warn-name-shadowing
        -fno-warn-orphans
        -fno-warn-unused-binds
        -fno-warn-unused-do-bind
        -fspec-constr-count=10
        -funbox-strict-fields
        -O2
-- for profiling
--        -auto-all
--        -caf-all

  Extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DeriveDataTypeable
        EmptyDataDecls
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        ImpredicativeTypes
        KindSignatures
        MultiParamTypeClasses
        OverloadedStrings
        ParallelListComp
        Rank2Types
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
