Name:           lambdacube-gl
Version:        0.1.0
Cabal-Version:  >= 1.6 && < 2
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Author:         Csaba Hruska, Gergely Patai
Maintainer:     csaba (dot) hruska (at) gmail (dot) com
Stability:      experimental
Homepage:       http://www.haskell.org/haskellwiki/LambdaCubeEngine
Bug-Reports:    https://github.com/csabahruska/lc-dsl/issues
Category:       Graphics
Tested-With:    GHC == 7.8.2
Synopsis:       OpenGL backend for LambdaCube graphics language

Library
  default-language:  Haskell2010
  hs-source-dirs:    src/lib
  Build-Depends: 
        base,
        binary,
        bytestring,
        containers,
        mtl,
        vector,
        prettyclass >=1.0 && <1.1,

        bytestring-trie,
        OpenGLRaw,
        bitmap,
        language-glsl >=0.1 && <0.2,

        lambdacube-core == 0.1.0,
        lambdacube-edsl == 0.1.0

  Exposed-modules:
        LambdaCube.GL
        LambdaCube.GL.Mesh

  other-modules:
        LambdaCube.GL.Backend
        LambdaCube.GL.Compile
        LambdaCube.GL.Data
        LambdaCube.GL.GLSLCodeGen
        LambdaCube.GL.Type
        LambdaCube.GL.Util

  GHC-options:
--        -Werror
        -Wall
        -fno-warn-missing-signatures
        -fno-warn-name-shadowing
        -fno-warn-orphans
        -fno-warn-unused-binds
        -fno-warn-unused-do-bind
        -fspec-constr-count=10
        -funbox-strict-fields
        -O2
-- for profiling
--        -auto-all
--        -caf-all

  Extensions:
        DataKinds
        DeriveDataTypeable
        OverloadedStrings
        ParallelListComp
        ScopedTypeVariables
        TupleSections
