name:                samples
version:             0.2.0
synopsis:            Samples for LambdaCube 3D
description:
 
homepage:            http://lambdacube3d.wordpress.com/
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska, Gergely Patai
maintainer:          csaba.hruska@gmail.com, patai.gergely@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10



executable lambdacube-deffered
  main-is:             deferredTest.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, TypeOperators, NoMonomorphismRestriction, ExistentialQuantification, PackageImports, DoRec, ParallelListComp, DataKinds, NamedFieldPuns
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5,
                       mtl >=2.2,
                       bytestring >=0.10,
                       bytestring-trie >=0.2,
                       vect >=0.4,
                       vector >=0.10,
                       elerea >=2.7,
                       lambdacube-core >=0.2,
                       lambdacube-edsl >=0.2,
                       lambdacube-gl >=0.2,
                       time >=1.4,
                       OpenGLRaw >=1.4,
                       GLFW-b >=1.4.6,
                       stb-image
